[gd_scene load_steps=15 format=2]

[ext_resource path="res://src/World/PondVisualization.tscn" type="PackedScene" id=1]
[ext_resource path="res://src/UI/Elements/EnergyBar.tscn" type="PackedScene" id=2]
[ext_resource path="res://src/World/PondMatch.gd" type="Script" id=3]
[ext_resource path="res://src/UI/Elements/RunResetButton.gd" type="Script" id=4]
[ext_resource path="res://assets/theme/gdquest.theme" type="Theme" id=5]
[ext_resource path="res://src/Utility/ResetManager.gd" type="Script" id=6]
[ext_resource path="res://src/UI/QuitMatchPopup.tscn" type="PackedScene" id=7]
[ext_resource path="res://src/World/EnergyBars.gd" type="Script" id=8]
[ext_resource path="res://assets/theme/stylebox/player3_fg.tres" type="StyleBox" id=9]
[ext_resource path="res://assets/theme/stylebox/player2_fg.tres" type="StyleBox" id=10]
[ext_resource path="res://assets/theme/stylebox/player0_fg.tres" type="StyleBox" id=11]
[ext_resource path="res://assets/theme/stylebox/player1_fg.tres" type="StyleBox" id=12]
[ext_resource path="res://src/UI/Elements/LuaScriptStatus.tscn" type="PackedScene" id=13]
[ext_resource path="res://assets/theme/timer_theme.tres" type="Theme" id=14]

[node name="PondMatch" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 3 )

[node name="MatchTimer" type="Timer" parent="."]

[node name="ResetManager" type="Node" parent="."]
script = ExtResource( 6 )

[node name="UI" type="HBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = 5.0
margin_bottom = -5.0
size_flags_horizontal = 3
size_flags_vertical = 3
theme = ExtResource( 5 )
custom_constants/separation = 6
alignment = 1

[node name="MarginContainer" type="MarginContainer" parent="UI"]
margin_right = 405.0
margin_bottom = 590.0
custom_constants/margin_right = 0
custom_constants/margin_top = 0
custom_constants/margin_left = 5
custom_constants/margin_bottom = 0

[node name="Gameplay" type="VBoxContainer" parent="UI/MarginContainer"]
margin_left = 5.0
margin_right = 405.0
margin_bottom = 590.0

[node name="PondContainer" type="ViewportContainer" parent="UI/MarginContainer/Gameplay"]
margin_right = 400.0
margin_bottom = 400.0
rect_min_size = Vector2( 400, 400 )
size_flags_horizontal = 0
size_flags_vertical = 0
size_flags_stretch_ratio = 3.0
stretch = true

[node name="PondViewport" type="Viewport" parent="UI/MarginContainer/Gameplay/PondContainer"]
size = Vector2( 400, 400 )
handle_input_locally = false
render_target_v_flip = true
render_target_update_mode = 3

[node name="PondVisualization" parent="UI/MarginContainer/Gameplay/PondContainer/PondViewport" instance=ExtResource( 1 )]

[node name="EnergyBars" type="GridContainer" parent="UI/MarginContainer/Gameplay"]
margin_top = 416.0
margin_right = 400.0
margin_bottom = 495.0
size_flags_horizontal = 3
size_flags_vertical = 7
columns = 2
script = ExtResource( 8 )

[node name="EnergyBar2" parent="UI/MarginContainer/Gameplay/EnergyBars" instance=ExtResource( 2 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 192.0
margin_bottom = 31.0
size_flags_horizontal = 3
size_flags_vertical = 3
text = "P3"
theme_override = ExtResource( 10 )

[node name="EnergyBar3" parent="UI/MarginContainer/Gameplay/EnergyBars" instance=ExtResource( 2 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 208.0
margin_right = 400.0
margin_bottom = 31.0
size_flags_horizontal = 3
size_flags_vertical = 3
text = "P4"
theme_override = ExtResource( 9 )

[node name="EnergyBar0" parent="UI/MarginContainer/Gameplay/EnergyBars" instance=ExtResource( 2 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 47.0
margin_right = 192.0
margin_bottom = 78.0
size_flags_horizontal = 3
size_flags_vertical = 3
text = "P1"
theme_override = ExtResource( 11 )

[node name="EnergyBar1" parent="UI/MarginContainer/Gameplay/EnergyBars" instance=ExtResource( 2 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 208.0
margin_top = 47.0
margin_right = 400.0
margin_bottom = 78.0
size_flags_horizontal = 3
size_flags_vertical = 3
text = "P2"
theme_override = ExtResource( 12 )

[node name="HBoxContainer" type="HBoxContainer" parent="UI/MarginContainer/Gameplay"]
margin_top = 511.0
margin_right = 400.0
margin_bottom = 590.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="QuitButton" type="Button" parent="UI/MarginContainer/Gameplay/HBoxContainer"]
margin_right = 32.0
margin_bottom = 79.0
rect_min_size = Vector2( 32, 0 )
theme = ExtResource( 5 )
text = "<"

[node name="StepButton" type="Button" parent="UI/MarginContainer/Gameplay/HBoxContainer"]
margin_left = 48.0
margin_right = 153.0
margin_bottom = 79.0
size_flags_horizontal = 3
size_flags_vertical = 3
text = "Step"

[node name="RunResetButton" type="Button" parent="UI/MarginContainer/Gameplay/HBoxContainer"]
margin_left = 169.0
margin_right = 279.0
margin_bottom = 79.0
size_flags_horizontal = 3
text = "Começar"
script = ExtResource( 4 )
run_text = "Começar"

[node name="SimulateResetButton" type="Button" parent="UI/MarginContainer/Gameplay/HBoxContainer"]
margin_left = 295.0
margin_right = 400.0
margin_bottom = 79.0
size_flags_horizontal = 3
text = "Simular"
script = ExtResource( 4 )
run_text = "Simular"

[node name="SendScriptButton" type="Button" parent="UI/MarginContainer/Gameplay/HBoxContainer"]
visible = false
margin_left = 260.0
margin_right = 400.0
margin_bottom = 84.0
size_flags_horizontal = 3
text = "Enviar script"

[node name="Editor" type="VBoxContainer" parent="UI"]
margin_left = 411.0
margin_right = 1024.0
margin_bottom = 590.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/separation = 5

[node name="ScriptTabs" type="TabContainer" parent="UI/Editor"]
margin_right = 613.0
margin_bottom = 554.0
size_flags_horizontal = 3
size_flags_vertical = 3
tab_align = 0

[node name="ScriptStatus" parent="UI/Editor" instance=ExtResource( 13 )]
margin_top = 559.0
margin_right = 613.0
margin_bottom = 590.0

[node name="TimerLabel" type="Label" parent="."]
margin_left = 14.0
margin_top = 8.0
margin_right = 121.0
margin_bottom = 58.0
theme = ExtResource( 14 )
text = "-:--:--"

[node name="QuitMatchPopup" parent="." instance=ExtResource( 7 )]

[connection signal="match_run_started" from="." to="." method="_on_PondMatch_match_run_started"]
[connection signal="match_run_stopped" from="." to="." method="_on_PondMatch_match_run_stopped"]
[connection signal="timeout" from="MatchTimer" to="." method="_on_MatchTimer_timeout"]
[connection signal="sfx_played" from="UI/MarginContainer/Gameplay/PondContainer/PondViewport/PondVisualization" to="." method="_on_PondVisualization_sfx_played"]
[connection signal="vfx_played" from="UI/MarginContainer/Gameplay/PondContainer/PondViewport/PondVisualization" to="." method="_on_PondVisualization_vfx_played"]
[connection signal="pressed" from="UI/MarginContainer/Gameplay/HBoxContainer/QuitButton" to="." method="_on_QuitButton_pressed"]
[connection signal="pressed" from="UI/MarginContainer/Gameplay/HBoxContainer/StepButton" to="." method="_on_StepButton_pressed"]
[connection signal="reset" from="UI/MarginContainer/Gameplay/HBoxContainer/RunResetButton" to="." method="_on_RunResetButton_reset"]
[connection signal="run" from="UI/MarginContainer/Gameplay/HBoxContainer/RunResetButton" to="." method="_on_RunResetButton_run"]
[connection signal="reset" from="UI/MarginContainer/Gameplay/HBoxContainer/SimulateResetButton" to="." method="_on_SimulateResetButton_reset"]
[connection signal="run" from="UI/MarginContainer/Gameplay/HBoxContainer/SimulateResetButton" to="." method="_on_SimulateResetButton_run"]
[connection signal="pressed" from="UI/MarginContainer/Gameplay/HBoxContainer/SendScriptButton" to="." method="_on_SendScriptButton_pressed"]
[connection signal="verify_requested" from="UI/Editor/ScriptStatus" to="." method="_on_LuaScriptStatus_verify_requested"]
[connection signal="confirmed" from="QuitMatchPopup" to="." method="_on_QuitMatchPopup_confirmed"]
